--- a/index.html
+++ b/index.html
@@ -16,13 +16,28 @@
     <body>
         <div class="container">
             <div class="card-wrapper">
+                <div class="slider-controls">
+                    <button class="next-slide-btn">
+                        <img src="/images/arrow.webp" alt="arrow" />
+                    </button>
+
+                    <div class="slider-dots">
+                      <button class="slider-dot"></button>
+                      <button class="slider-dot"></button>
+                      <button class="slider-dot"></button>
+                      <button class="slider-dot"></button>
+                      <button class="slider-dot"></button>
+
+                    </div>
+                </div>
+
                 <div class="card">
                     <header>
                         <p>Сахалин — гостеприимный остров</p>
                         <p>Он не прячет свои красоты. Но бережливо охраняет:</p>
                     </header>
                     <div>
-                        <img src="/public/images/card-1.webp" alt="" />
+                        <img src="/images/card-1.webp" alt="" />
                     </div>
                 </div>
 
@@ -34,40 +49,41 @@
                         </p>
                     </header>
                     <div>
-                        <img src="/public/images/card-2.webp" alt="" />
+                        <img src="/images/card-2.webp" alt="" />
+                    </div>
+                </div>
+
+                <div class="card">
+                    <header>
+                        <p>здесь люди охраняют собак от медведиц</p>
+                    </header>
+                    <div>
+                        <img src="/images/card-3.webp" alt="" />
                     </div>
                 </div>
 
                 <div class="card">
                     <header>
                         <p>
-                          здесь люди охраняют собак от медведиц
+                            здесь по весне рыбалку лучше не затевать — все самые
+                            клевые места будут заняты медведями.
                         </p>
                     </header>
                     <div>
-                        <img src="/public/images/card-3.webp" alt="" />
+                        <img src="/images/card-4.webp" alt="" />
                     </div>
                 </div>
 
                 <div class="card">
                     <header>
                         <p>
-                          здесь по весне рыбалку лучше не затевать — все самые клевые места будут заняты медведями.
+                            Но если воспользоваться проверенными маршрутами, то
+                            шанс получить восторгот поездки (и только его!) —
+                            100%
                         </p>
                     </header>
                     <div>
-                        <img src="/public/images/card-4.webp" alt="" />
-                    </div>
-                </div>
-
-                <div class="card">
-                    <header>
-                        <p>
-                          Но если воспользоваться проверенными маршрутами, то шанс получить восторгот поездки (и только его!) — 100%
-                        </p>
-                    </header>
-                    <div>
-                        <img src="/public/images/card-5.webp" alt="" />
+                        <img src="/images/card-5.webp" alt="" />
                     </div>
                 </div>
             </div>
